<resources>
    <string name="app_name">Quiz1</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="add_student">Add Student</string>
    <string name="registration_no">Registration No</string>
    <string name="study_group">Study Group</string>
    <string name="last_name">Last Name</string>
    <string name="first_name">First Name</string>
</resources>
