<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.AddDetailsFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp">

        <EditText
            android:id="@+id/first_name_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/first_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/last_name_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/last_name"
            android:inputType="text" />

        <EditText
            android:id="@+id/reg_no_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/registration_no"
            android:inputType="number" />

        <EditText
            android:id="@+id/study_group_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/study_group"
            android:inputType="text" />

        <Button
            android:id="@+id/add_user_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:text="@string/add_student"
            android:textAllCaps="false" />
    </LinearLayout>

</FrameLayout>